--- a/app/src/main/res/layout/overlay_top.xml
+++ b/app/src/main/res/layout/overlay_top.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:card_view="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    card_view:cardBackgroundColor="#88000000"
-    card_view:cardCornerRadius="8dp"
-    card_view:cardElevation="0dp"
-    card_view:cardUseCompatPadding="true">
+    app:cardBackgroundColor="#88000000"
+    app:cardCornerRadius="8dp"
+    app:cardElevation="0dp"
+    app:cardUseCompatPadding="true">
 
     <ImageView
         android:layout_width="wrap_content"
